# conectbras-document-management-assistant

./: .gitignore  .taurignore  Cargo.toml  README.md  bun.lockb  index.html  package.json  tailwind.config.js
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/document_processor/: selector.rs
src/app/components/: hero.rs
